syntax = "proto3";

package user;

option go_package = "github.com/yeegeek/uyou-Infrastructure/proto/user";

// 用户服务
service UserService {
  // 用户注册
  rpc Register(RegisterRequest) returns (RegisterResponse);
  
  // 用户登录
  rpc Login(LoginRequest) returns (LoginResponse);
  
  // 获取用户信息
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  
  // 更新用户信息
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
}

// 注册请求
message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

// 注册响应
message RegisterResponse {
  int64 user_id = 1;
  string message = 2;
}

// 登录请求
message LoginRequest {
  string username = 1;
  string password = 2;
}

// 登录响应
message LoginResponse {
  string token = 1;
  int64 user_id = 2;
  string username = 3;
}

// 获取用户请求
message GetUserRequest {
  int64 user_id = 1;
}

// 获取用户响应
message GetUserResponse {
  int64 user_id = 1;
  string username = 2;
  string email = 3;
  string avatar = 4;
  string created_at = 5;
}

// 更新用户请求
message UpdateUserRequest {
  int64 user_id = 1;
  string email = 2;
  string avatar = 3;
}

// 更新用户响应
message UpdateUserResponse {
  bool success = 1;
  string message = 2;
}
